<resources>
    <string name="app_name">RxJava2Demo</string>
    <string name="chapter1">chapter1</string>
    <string name="chapter2">chapter2</string>
    <string name="chapter3">chapter3</string>
    <string name="chapter4">chapter4</string>
    <string name="chapter5">chapter5</string>
    <string name="chapter6">chapter6</string>
    <string name="chapter7">chapter7</string>
    <string name="chapter8">chapter8</string>
    <string name="chapter9">chapter9</string>
</resources>
